# iiplayer

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/syiyi/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/android/: CallJava.cpp  CallJava.h  android_log.h  iiplayer_jni.cpp  iiplayer_jni.h  util.cpp  util.h
app/src/main/cpp/media/: AudioDecoder.cpp  AudioDecoder.h  AudioRender.cpp  AudioRender.h  FrameQueue.cpp  FrameQueue.h  MediaPlayer.cpp  MediaPlayer.h  PacketQueue.cpp  PacketQueue.h  PacketReader.cpp  PacketReader.h  Status.cpp  Status.h  VideoDecoder.cpp  VideoDecoder.h  VideoRender.cpp  VideoRender.h  audio_render.cpp  audio_render.h  frame_queue.cpp  frame_queue.h  media_player.cpp  media_player.h  packet_queue.cpp  packet_queue.h  status.cpp  status.h  util.cpp  util.h
app/src/main/cpp/media/decode/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  Decoder.h  HardVideoDecoder.cpp  HardVideoDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/media/global/: LifeSequenceHolder.cpp  LifeSequenceHolder.h  Status.cpp  Status.h
app/src/main/cpp/media/other/: util.cpp  util.h
app/src/main/cpp/media/queue/: FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h
app/src/main/cpp/media/reader/: PacketReader.cpp  PacketReader.h
app/src/main/cpp/media/render/: AudioRender.cpp  AudioRender.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/media/sdl/: SDLAudio.cpp  SDLAudio.h  SDLVideo.cpp  SDLVideo.h  sdl_jni.cpp  sdl_jni.h  shaderUtils.cpp  shaderUtils.h
app/src/main/java/com/syiyi/player/: IIMediaPlayer.java  IiMediaPlayer.java  MainActivity.java  TimeInfo.java  Util.java  VideoSupportUtil.java
app/src/main/java/com/syiyi/player/listener/: OnBufferTimeListener.java  OnErrorListener.java  OnPlayTimeListener.java  OnPrepareListener.java  OnSeekCompleteListener.java
app/src/main/java/com/syiyi/player/opengl/: GlRender.java  IIGLSurfaceView.java  IIGlSurfaceView.java  MyLog.java  OnGlSurfaceViewCreateListener.java  OnRenderRefreshListener.java  Render.java  ShaderUtil.java  ShaderUtils.java
app/src/main/java/com/syiyi/player/sdl/: MediaCodecSurface.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_mediacodec.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/syiyi/player/: ExampleUnitTest.java
ffmpeg-3.4.2编译脚本/: build-ffmpeg-android.sh  build-x264-android.sh
gradle/wrapper/: gradle-wrapper.properties
